# nanoNetwork

./: .gitignore  CMakeLists.txt  LICENSE
example/: main.cpp
header/: NeuralNetworkLayer.hpp
lib/: ActivationFunction.cpp  ActivationFunction.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkLayer.cpp  NeuralNetworkLayer.hpp  Trainer.hpp
scripts/: build.sh
source/: ActivationFunction.cpp  NeuralNetwork.cpp  NeuralNetworkLayer.cpp
src/: ActivationFunction.cpp  NeuralNetworkLayer.cpp  Trainer.hpp
testSrc/: main.cpp
